Stop scrollbar from always being visible

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,7 @@
   }
 
   &-content {
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
     background-color: $color-page-background;
     height: 100%;
